src/test/ui/const-generics/slice-const-param-mismatch.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/slice-const-param-mismatch.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default

error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:9:35
   |
LL |     let _: ConstString<"Hello"> = ConstString::<"World">;
   |            --------------------   ^^^^^^^^^^^^^^^^^^^^^^ expected `"Hello"`, found `"World"`
   |            |
   |            expected due to this
   |
   = note: expected struct `ConstString<"Hello">`
              found struct `ConstString<"World">`

error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:11:33
   |
LL |     let _: ConstString<"ℇ㇈↦"> = ConstString::<"ℇ㇈↥">;
   |            -------------------   ^^^^^^^^^^^^^^^^^^^^^ expected `"ℇ㇈↦"`, found `"ℇ㇈↥"`
   |            |
   |            expected due to this
   |
   = note: expected struct `ConstString<"ℇ㇈↦">`
              found struct `ConstString<"ℇ㇈↥">`

error[E0308]: mismatched types
  --> $DIR/slice-const-param-mismatch.rs:13:33
   |
LL |     let _: ConstBytes<b"AAA"> = ConstBytes::<b"BBB">;
   |            ------------------   ^^^^^^^^^^^^^^^^^^^^ expected `b"AAA"`, found `b"BBB"`
   |            |
   |            expected due to this
   |
   = note: expected struct `ConstBytes<b"AAA">`
              found struct `ConstBytes<b"BBB">`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0308`.
